# PyComplexity

./: .gitignore  LICENSE  README.md  pyproject.toml
Modelling/: Train.ipynb
Preprocessing/1_Get_Data/MJFF_Cohort/0_Source/: Sourced.ipynb
Preprocessing/1_Get_Data/MJFF_Cohort/1_Transform/: 1_Determine_Vertical&Crop_Day_1.ipynb  1_Determine_Vertical&Crop_Day_2.ipynb  2_Split_HOME_Day_1.ipynb  2_Split_HOME_Day_2.ipynb  2_Split_OFF.ipynb  2_Split_ON.ipynb
Preprocessing/1_Get_Data/MJFF_Cohort/1_Transform/MATLAB_Scripts/: Apply_GSD.m  Apply_GSD_LowBackAcc(GaitBout_Detection).rtf  Apply_Shin_algo_improved(HS_Detection).rtf  modified_run_GSD_LowBackAcc.m  run_GSD_LowBackAcc.m  run_Shin_algo_improved.m  run_zjilsV3.m
Preprocessing/1_Get_Data/McGill_Cohort/0_Source/: Sourced_Fatigue.py
Preprocessing/1_Get_Data/McGill_Cohort/1_Extract/: Extracted_Fatigue.py  Extracted_Trina.py
Preprocessing/1_Get_Data/McGill_Cohort/2_Transform/: 1_Crop_Fatigue.ipynb  1_Crop_Trina.ipynb  2_Crop.ipynb
Preprocessing/1_Get_Data/McGill_Cohort/2_Transform/temp/pre_cropped_fatigue/: PD61.csv  PD80.csv  PD81.csv  PD83.csv  PD84.csv  PD85.csv  PD87.csv  PD91.csv  PD94.csv  PD95.csv
Preprocessing/McGill_Cohort/0_Source/: Sourced_Trina.py
Preprocessing/McGill_Cohort/1_Extract/: Extracted_Fatigue.py
PyComplexity/: pyproject.toml
PyComplexity/src/: aci.py
src/PyComplexity/: __init__.py
src/PyComplexity_ACI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
